blink/decoders: Make sure ICOImageDecoder decodes to external memory.

The ImageDecoder should decode to external memory if provided an
allocator. The ICOImageDecoder was missing forwarding this allocator to
a png decoder it uses internally.

R=chrishtr@chromium.org

Bug: 884136
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Iacad54e2640bc4f91d48e9a3c28bc6073b95ba6a
Reviewed-on: https://chromium-review.googlesource.com/1227397
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Khushal <khushalsagar@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592198}
Former-commit-id: 9e04b4da70bce0990f7a9df5f92edf129b393ef4